r133 (03. 03. 2023):
Fixed a crash with missing values

r132 (02. 03. 2023):
Safehouse Raid: Fixed a crash in Mission Briefing

r131 (01. 03. 2023):
Fixed a possible crash in Mission Briefing due to logic issue

r130 (28. 02. 2023):
Fixed a possible crash in Mission Briefing

r129 (27. 02. 2023):
Added options "Show Remaining XP to Next Level/Infamy Pool", "Show Remaining XP to Level 100" and "Show Mission XP Overview"
Ukrainian Prisoner: Fixed a crash related to unit

r128 (24. 02. 2023):
Hostile Takeover: Trigger fixes for achievements

r127 (23. 02. 2023):
Fixed a crash at mission load (client only)

r126 (22. 02. 2023):
Added trackers for Hostile Takeover
Attempt to fix Loot Counter not working to some players

r125 (04. 02. 2023):
Fixed a crash when an offset is set to a doctor bag

r124 (29. 01. 2023):
Pager Tracker: Fixed an issue with stuck pager waypoints when clients answered them
Enemy Counter: Fixed wrong enemy count after drop in

r123 (28. 01. 2023):
Attempt to fix random crashes in XP Tracker

r122 (21. 01. 2023):
Added option "Show Enemy Turret Trackers"
XP Tracker: Fixed a rare crash when game returned nil value for accumulated stealth bonus

r121 (13. 01. 2023):
Enemy Counter: Fixed double value
Enemy Counter: Fixed an issue where dominated guard with pager does not count down pager counter

r120 (12. 01. 2023):
"A Criminal Carol" event ended
Assault Delay Tracker: Fixed a crash with mods that change hostage delay
Enemy Counter: Fixed an issue where counter is negative

r119 (09. 01. 2023):
Assault Delay Tracker: Fixed a crash when alarm went off
Enemy Count Tracker: Fixed a visual issue where 2 icons overlap each other

r118 (08. 01. 2023):
Menu: Fixed a visibility issue with options having multiple parents
Minion Tracker: Tracker will use less space on the screen
Slaughterhouse: Fixed a visual issue in achievement tracker "Not hard enough"

r117 (05. 01. 2023):
Shadow Raid: Fixed a crash at sync

r116 (03. 01. 2023):