@@ -594,6 +594,7 @@
     "ehi_experience_vault_found" : "Trezor nalezen: ",
     "ehi_experience_vault_open" : "Trezor otevřen: ",
     "ehi_experience_turret_secured" : "Střílna zajištěna: ",
+    "ehi_experience_pc_found" : "PC nalezen: ",
     "ehi_experience_pc_hack" : "Hacknuté PC: ",
     "ehi_experience_correct_pc_hack" : "Hacknuté správné PC: ",
     "ehi_experience_c4_set_up" : "Položená C4: ",
@@ -632,5 +633,34 @@
     "ehi_experience_rats2_info_destroyed" : "Info zničeno: ",
     "ehi_experience_rats2_trade" : "Předání perníku: ",
     "ehi_experience_rats2_trade_and_steal" : "Předání a potom ukradení perníku zpět: ",
-    "ehi_experience_rats3_rats_killed" : "Informátoři zabiti: "
+    "ehi_experience_rats3_rats_killed" : "Informátoři zabiti: ",
+    "ehi_experience_big_oil_intel_pickup" : "Sebrání informací: ",
+    "ehi_experience_big_oil_safe_open" : "Správný sejf otevřen: ",
+    "ehi_experience_big_oil2_correct_engine" : "Správný motor nalezen: ",
+    "ehi_experience_ff3_item_deployed" : "Předmět nachystán (Střecha): ",
+    "ehi_experience_ff3_cocaine_placed" : "Umístěn kokain: ",
+    "ehi_experience_ff3_gold_secured" : "Zlato zajištěno: ",
+    "ehi_experience_ed1_tag_right_truck" : "Označen správný náklaďák: ",
+    "ehi_experience_ed1_hack_1" : "První PC hack: ",
+    "ehi_experience_ed1_hack_2" : "Druhý PC hack: ",
+    "ehi_experience_hm1_mobsters_killed" : "Gangsteři zabiti: ",
+    "ehi_experience_hm1_cars_destroyed" : "Auta zničena: ",
+    "ehi_experience_hm1_gas_station_destroyed" : "Benzínova pumpa zničena: ",
+    "ehi_experience_hm1_hatch_open" : "Poklop otevřen: ",
+    "ehi_experience_hm1_correct_barcode_scanned" : "Naskenován správný čárový kód: ",
+    "ehi_experience_hm1_meth_cooked" : "Uvařen 1 pytel perníku: ",
+    "ehi_experience_hm2_enter_building" : "Vstup do budovy: ",
+    "ehi_experience_hm2_hostage_rescued" : "Rukojmí zachráněn: ",
+    "ehi_experience_hm2_yellow_gate_open" : "Otevřena žlutá brána: ",
+    "ehi_experience_hm2_magnetic_door_open" : "Otevřeny magnetické dveře: ",
+    "ehi_experience_hm2_enter_apartment" : "Vstup do commissarova bytu: ",
+    "ehi_experience_hm2_commissar_dead" : "Commissar zabit: ",
+    "ehi_experience_hox1_first_corner" : "Auto projelo první zatáčku: ",
+    "ehi_experience_hox1_second_corner" : "Auto projelo druhou zatáčku: ",
+    "ehi_experience_hox1_blockade_cleared" : "Překážka odstraněna: ",
+    "ehi_experience_hox1_parking_gate_open" : "Sebrán parkovací lístek: ",
+    "ehi_experience_hox1_parking_car_reached_garages" : "Obrněné vozidlo dorazilo na parkoviště: ",
+    "ehi_experience_hox2_reached_server_room" : "Hoxton dorazil do serverové místnosti: ",
+    "ehi_experience_hox2_random_obj" : "Náhodný úkol dokončen: ",
+    "ehi_experience_hox2_no_keycard_bonus_xp" : "Nepoužily se žádné karty: "
 }
