@@ -594,6 +594,7 @@
     "ehi_experience_vault_found" : "Vault found: ",
     "ehi_experience_vault_open" : "Vault opened: ",
     "ehi_experience_turret_secured" : "Turret secured: ",
+    "ehi_experience_pc_found" : "PC Found: ",
     "ehi_experience_pc_hack" : "PC Hack: ",
     "ehi_experience_correct_pc_hack" : "Correct PC Hack: ",
     "ehi_experience_c4_set_up" : "Placed C4: ",
@@ -632,5 +633,34 @@
     "ehi_experience_rats2_info_destroyed" : "Info destroyed: ",
     "ehi_experience_rats2_trade" : "Trade: ",
     "ehi_experience_rats2_trade_and_steal" : "Trade and then steal: ",
-    "ehi_experience_rats3_rats_killed" : "Rats killed: "
+    "ehi_experience_rats3_rats_killed" : "Rats killed: ",
+    "ehi_experience_big_oil_intel_pickup" : "Intel pickup: ",
+    "ehi_experience_big_oil_safe_open" : "Correct safe opened: ",
+    "ehi_experience_big_oil2_correct_engine" : "Correct engine found: ",
+    "ehi_experience_ff3_item_deployed" : "Item placed on the roof: ",
+    "ehi_experience_ff3_cocaine_placed" : "Cocaine placed: ",
+    "ehi_experience_ff3_gold_secured" : "Gold secured: ",
+    "ehi_experience_ed1_tag_right_truck" : "Correct truck tagged: ",
+    "ehi_experience_ed1_hack_1" : "First PC Hack: ",
+    "ehi_experience_ed1_hack_2" : "Second PC Hack: ",
+    "ehi_experience_hm1_mobsters_killed" : "Mobsters killed: ",
+    "ehi_experience_hm1_cars_destroyed" : "Cars destroyed: ",
+    "ehi_experience_hm1_gas_station_destroyed" : "Gas station destroyed: ",
+    "ehi_experience_hm1_hatch_open" : "Hatch opened: ",
+    "ehi_experience_hm1_correct_barcode_scanned" : "Correct barcode scanned: ",
+    "ehi_experience_hm1_meth_cooked" : "1 bag of meth cooked: ",
+    "ehi_experience_hm2_enter_building" : "Entered building: ",
+    "ehi_experience_hm2_hostage_rescued" : "Hostage rescued: ",
+    "ehi_experience_hm2_yellow_gate_open" : "Yellow gate opened: ",
+    "ehi_experience_hm2_magnetic_door_open" : "Magnetic door opened: ",
+    "ehi_experience_hm2_enter_apartment" : "Entered commissar's apartment: ",
+    "ehi_experience_hm2_commissar_dead" : "Killed commissar: ",
+    "ehi_experience_hox1_first_corner" : "First corner reached: ",
+    "ehi_experience_hox1_second_corner" : "Second corner reached: ",
+    "ehi_experience_hox1_blockade_cleared" : "Obstacle cleared: ",
+    "ehi_experience_hox1_parking_gate_open" : "Took a parking ticket: ",
+    "ehi_experience_hox1_parking_car_reached_garages" : "Armored car reached parking lot: ",
+    "ehi_experience_hox2_reached_server_room" : "Hoxton reached server room: ",
+    "ehi_experience_hox2_random_obj" : "Done random objective: ",
+    "ehi_experience_hox2_no_keycard_bonus_xp" : "No keycards used: "
 }
